# aepcc

./: .gitignore  .gitmodules  README.md  install_dependencies.py  pyproject.toml
architecture/: folding.py  gae.py  gcn.py  tgae.py
codec_sa/: object_codec.py  scene_codec.py  scene_codec_all.py
config/: checkpoints.yaml.example  data.yaml  data_pipeline.yaml  default-params.yaml  out_of_project_paths.yaml.example  scenes.yaml  smol_config.yaml
dataloaders/: DataLoading.py
experiment_definitions/foldnet/: fn_gauss.yaml  fn_grid.yaml  fn_sphere.yaml
experiment_definitions/foldnet_final/: fn_sphere_128.yaml  fn_sphere_256.yaml  fn_sphere_512.yaml
experiment_definitions/gae/: gae_128_hs.yaml  gae_256_hs.yaml  gae_512_hs.yaml
experiment_definitions/tgae/: tgae_128_hs.yaml  tgae_256_hs.yaml  tgae_512_hs.yaml
loss/: gae_loss.py  loss.py
pipeline/data/: extract_samples.py  generate_h5.py  generate_metadata.py
pipeline/training/: train_from_config.py
rate-distortion-compute/: rdc_per_object.py  rdc_per_scene.py
scripts/data/: preprocessed_stats.py  report_classes.py  synonyms_annotate.py
scripts/model_stats/: count_model_params.py
scripts/visualize/: visualize_architecture_output.py  visualize_dataset.py  visualize_latent_distribution.py
tests/: test_dataloader.py  test_h5_read.py  test_loss.py  test_loss_gae.py  test_pe.py  test_registered_arch.py  test_registered_dl.py  test_registered_loss.py
utils/: codec.py  codec_sa.py  folding.py  geometry.py  utils.py  visualize.py
utils/DataPipeline/: MeshCache.py  extract.py  h5.py  metadata.py  (+1 more)
(+66 files in other folders)
